# NoNail

./: .gitignore  README.md  config.example.yaml  nonail_project_summary.txt  pyproject.toml
.github/: copilot-instructions.md
docs/: openwrt-deps.md
nonail/: __init__.py  __main__.py  _fastcore.cpp  agent.py  config.py  fastpath.py  mcp_client.py  mcp_server.py
nonail/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
nonail/tools/: __init__.py  advanced.py  base.py  bash.py  packages.py  process.py
nonail/zombie/: __init__.py  master.py  protocol.py  slave.py
nonail/zombie/messaging/: __init__.py  base.py  telegram_bot.py  whatsapp.py
nonail/zombie/service/: __init__.py  installer.py
scripts/: zombie_organizer.py
v1/: README.md  config.example.yaml  plan.txt  setup.py
v1/docs/: openwrt-packaging.md
v1/nonail/: cache.py  config.py  ui.py
v1/nonail/providers/: anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  openai_provider.py
v1/nonail/tools/: dynamic.py  filesystem.py  system.py  terminal.py
v1/nonail/zombie/: master.py  slave.py
v1/nonail/zombie/messaging/: discord_bot.py
v1/scripts/: bench.py
v1/tests/: test_cache_loop.py  test_completion.py  test_fallback.py
v2/: CMakeLists.txt  README.md
v2/cmake/: openwrt-mt7621.cmake
v2/include/core/: agent.hpp  cache.hpp  config.hpp  http_client.hpp
v2/include/devices/: device_manager.hpp
v2/include/organizer/: system_organizer.hpp
v2/include/providers/: anthropic.hpp  gemini.hpp  groq.hpp  openai.hpp  provider.hpp
v2/include/tools/: tool_registry.hpp
v2/include/web/: server.hpp
v2/include/zombie/: master.hpp
v2/scripts/: build.sh  cross-compile.sh
v2/src/: main.cpp
v2/src/core/: agent.cpp  cache.cpp  config.cpp  http_client.cpp
v2/src/devices/: arp_scanner.cpp  device_manager.cpp  ssh_executor.cpp
v2/src/organizer/: system_organizer.cpp
v2/src/providers/: anthropic.cpp  openai.cpp  provider.cpp
v2/src/tools/: shell_tool.cpp  tool_registry.cpp
v2/src/web/: api_routes.cpp  server.cpp  ws_handler.cpp
v2/src/zombie/: master.cpp  protocol.cpp  slave.cpp
v2/src/zombie/messaging/: discord.cpp  telegram.cpp  whatsapp.cpp
v2/tests/: test_agent.cpp  test_cache.cpp  test_config.cpp  test_providers.cpp
